<resources>
    <string name="app_name">Pokémon App</string>
    <string name="list_pokedex">Lista de Pokédex</string>

    <!-- Captura de pokémon -->
    <string name="no_captured">No has capturado ningún Pokémon</string>
    <string name="pokemon_captured_title">¡Pokémon capturado!</string>
    <string name="pokemon_captured_message">Has capturado a %1$s</string>
    <string name="ok_button">¡Ok!</string>
    <string name="pokemon_captured_tab">Pokémon Capturados</string>
    <string name="settings_tab">Ajustes</string>

    <!-- Ajustes -->
    <string name="allow_deletion_title">Permitir eliminación</string>
    <string name="allow_deletion_summary">Habilita la opción de eliminar Pokémon capturados</string>
    <string name="language_title">Idioma</string>
    <string name="language_summary">Selecciona el idioma de la aplicación</string>
    <string name="language_dialog_title">Selecciona el idioma</string>
    <string name="logout_title">Cerrar sesión</string>
    <string name="logout_summary">Cierra tu sesión y vuelve a la pantalla principal</string>
    <string name="about_title">Acerca de</string>
    <string name="about_summary">Información sobre la aplicación</string>

    <!-- About -->
    <string name="about_message">Esta aplicación ha sido desarrollada por Carlos Vallejo. Versión 1.0.0</string>
    <string name="close_button">Cerrar</string>
    <string name="pokemonName">Nombre del Pokémon</string>

    <string name="pokemon_no_captured_title">Error</string>
    <string name="pokemon_no_captured_message">No ha sido posible guardar el Pokémon en la database.</string>
    <string name="close_login_title">Cerrar sesión</string>
    <string name="close_login_message">¿Estás seguro/a de que quieres cerrar tu sesión de usuario?</string>
    <string name="yes_button">Sí</string>
    <string name="no_button">No</string>
    <string name="list_captured">Pokémon Capturados</string>
    <string name="pokemon_already_captured_title">Pokémon ya capturado</string>
    <string name="pokemon_already_captured_message">Este Pokémon ya está en tu lista de capturados.</string>
    <string name="pokemonType">Pokémon type</string>
    <string name="pokemonWeight">Pokémon weight</string>
    <string name="pokemonHeight">Altura del Pokémon</string>
    <string name="Volver">Volver</string>

    <!-- Idiomas -->
    <string-array name="language_entries">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
    <string-array name="language_values">
        <item>es</item>
        <item>en</item>
    </string-array>
</resources>
