<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Imagen del Pokémon -->
            <ImageView
                android:id="@+id/pokemonImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop" />

            <!-- Nombre del Pokémon -->
            <TextView
                android:id="@+id/pokemonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/pokemonName"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- Tipo del Pokémon -->
            <TextView
                android:id="@+id/pokemonType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/pokemonType"
                android:textSize="18sp" />

            <!-- Peso del Pokémon -->
            <TextView
                android:id="@+id/pokemonWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/pokemonWeight"
                android:textSize="18sp" />

            <!-- Altura del Pokémon -->
            <TextView
                android:id="@+id/pokemonHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemonHeight"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                android:text="@string/Volver" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
